# POC

3d_models/battery_holder/: battery_holder_01.scad  battery_holder_01.stl  battery_holder_02.scad  battery_holder_02_2x2_aa.stl  battery_holder_02_6x6_aa.stl  battery_holder_02_6x6_aaa.stl
3d_models/toolbox socket trays/: 3_8_metric_deep_socket_tray.scad  3_8_metric_deep_socket_tray.stl  3_8_metric_short_socket_tray.scad  3_8_metric_short_socket_tray.stl  3_8_sae_deep_socket_tray.scad  3_8_sae_deep_socket_tray.stl  3_8_sae_short_socket_tray.scad  3_8_sae_short_socket_tray.stl  all_metric_tray.scad
3d_models/toolbox socket trays/placer_testing/: package-lock.json
bitcoin_math/: 01_priv_key_to_pub_key.py  02_bitcoin_lib_prv_pub_keys.py
brainfugd/: brainfugd_ga.py
buysell_game/: index.html
esp32_websocket_test/: esp32_websocket_test.ino  index_html.hpp  powerhawk.hpp
esp32_websocket_test/power_hawk/: package-lock.json  package.json
esp32_websocket_test/power_hawk/src/: App.js  PowerHawk.js
labels_pdf_maker/: thanks_chatgpt.py
learning_ocaml/: Makefile  factorial.ml  hello.ml  leibniz.ml  random_ocaml_crap.ml  sockets.ml  sqrt_2.ml  symbol_math_expressions.ml  webserver.ml
martingale_simulator/: jake_nfl_simulations.py  martingale_simulator.py
minecraft_stronghold_finder/: finder.py
orbital_physics/: CMakeLists.txt  orbital_physics.cpp  particle.cpp  particle.hpp  vector.hpp
particle_stuff/: CMakeLists.txt  particle.hpp  particle_stuff.cpp
piano_trainer_web_midi/: piano_trainer.html
py_graphics/: test01.py  test02.py  test03.py
reimann/: .gitignore  make.sh  reiman_simple.cpp
screen_watcher_sync/: screen_watcher_sync.py
sdr/: .gitignore  CMakeLists.txt  test2.py  uhd_gui_testing.cpp
sdr/old/: test03.grc  test03.py  test1.py  test2.py
sdr/old/uhd_testing/: CMakeLists.txt  uhd_test03.cpp
sdr/old/uhd_testing/uhd_test04/: .gitignore  Makefile  uhd_test04.cpp
sdr/test02/: analyze_cfile.py  demod_fm.py  gnuradio_b200_adsb.py  gnuradio_b200_adsb_2.py  gnuradio_b200_adsb_3.py  gnuradio_b200_fm.py  gnuradio_b200_gsm.grc  gnuradio_b200_gsm.py  gnuradio_kixd_tower.py
sdr/test03_gnu_radio/: default.py  test03.grc  test03.py  test03_adsb.grc  test03_adsb.py
sdr/test04_record_and_analyze/: CMakeLists.txt  analyze_cfile.py  record_to_cfile.cpp
sdr/uhd_testing/: CMakeLists.txt  uhd_test01.cpp  uhd_test03.cpp
sdr/uhd_testing/uhd_test04/: Makefile  uhd_test04.cpp  uhd_test04.pro
starguide/: try_hyg_database.py
teaching_neural_net_binary_addition/: teaching_neural_net_binary_addition.py
tile_puzzle_solver/: tile_puzzle_solver.py
ultrasonic_mics/: play_click.py
veritasium_equation/: veritasium_equation.py
wordle/: CMakeLists.txt  analyzer.py  optimizer.cpp  optimizer.py  sample_1000_words.txt  sample_100_words.txt  screen_read_tester.cpp  words.csv
wordle/cpp/: CMakeLists.txt  color.hpp  find_best_first_three_words.hpp  letter_color.hpp  mask.hpp  match_result.hpp  optimizer.cpp  pair_hash.hpp  util.hpp  word.hpp  word_list.hpp
